--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,135 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Myapp</title>
+  <title>Prof. Dr. Bidhan C Das - Hepatobiliary, Pancreatic, Best Liver Transplant Surgeon & Specialist in Bangladesh
+  </title>
+  <meta name="robots" content="index, follow" />
+  <meta name="description"
+    content="Prof. Dr. Bidhan C. Das is a dedicated Surgeon. His credentials are MBBS, FCPS(Surgery), PhD. - one of the best liver transplant surgeons specializing in advanced liver transplant surgery. Our top-rated liver transplant hospital offers expert care with the best liver transplant specialists, surgeons, and physicians. Explore liver transplant costs in Bangladesh, India, and worldwide, along with services from the best liver hospital near you. Find solutions for liver transplants, liver operations, and consultations with liver surgeons and doctors. Prof. Bidhan C Das is working in the field of Hepatobiliary and Pancreatic Surgery for last 25 years. He published more than 50 articles related to this subject in national and international journal. Now he is working for establishing liver transplant surgery in Bangabandhu Sheikh Mujib Medical University. He is a member of national liver transplant team of Bangladesh.">
+  <meta name="keywords"
+    content="liver transplant surgery, liver transplant hospital, best liver transplant surgeons, liver transplant specialist, liver transplant doctor, liver transplant surgeon, best liver transplant hospital, best liver transplant hospital in world, India's best liver transplant surgeon, liver operation cost, best liver transplant surgeon in world, best liver hospital, best liver hospital near me, liver surgeon specialist, liver transplant cost in Bangladesh, best liver transplant, liver surgeons, liver transplant in Bangladesh, top liver transplant surgeons, liver transplant Bangladesh, liver ke doctor, best doctor for liver transplant, liver transplant physician, best liver transplant doctor, liver transplant surgeon near me, hospital liver, liver hospital in Bangladesh, Dr. Gupta liver transplant, hospital for liver, liver transplant Dr., liver ka best doctor, doctor signed liver, world best liver hospital, liver and pancreas doctor">
+  <link rel="canonical" href="https://drbidhan.org" />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Prof. (Dr.) Bidhan C. Das",
+        "image": "https://drbidhan.org/assets/message/profile%20pic.jpg",
+        "jobTitle": "Professor-Hepatobiliary Pancreatic and Liver Transplant Surgery",
+        "affiliation": {
+            "@type": "MedicalOrganization",
+            "name": "Green Life Hospital Ltd."
+        },
+        "url": "https://drbidhan.org/",
+        "sameAs": [
+            "https://maps.app.goo.gl/yJaGZ3xqtbLnddeB7",
+            "https://drbidhan.org/#/overview/profile",
+            "https://hepatobiliary.bsmmu.ac.bd/faculty-member/10355",
+            "https://www.doctorspedia.co/doctor/prof-dr-bidhan-c-das",
+            "https://www.doctorbangladesh.com/dr-bidhan-c-das/",
+            "https://sasthyaseba.com/doctors/prof-dr-bidhan-c-das",
+            "https://greenlifehospital.com.bd/consultant/prof-dr-bidhan-c-das"
+        ],
+        "description": "Prof. Dr. Bidhan C. Das is a dedicated Surgeon. His credentials are MBBS, FCPS(Surgery), PhD. - one of the best liver transplant surgeons specializing in advanced liver transplant surgery. Our top-rated liver transplant hospital offers expert care with the best liver transplant specialists, surgeons, and physicians. Explore liver transplant costs in Bangladesh, India, and worldwide, along with services from the best liver hospital near you. Find solutions for liver transplants, liver operations, and consultations with liver surgeons and doctors. Prof. Bidhan C Das is working in the field of Hepatobiliary and Pancreatic Surgery for last 25 years. He published more than 50 articles related to this subject in national and international journal. Now he is working for establishing liver transplant surgery in Bangabandhu Sheikh Mujib Medical University. He is a member of national liver transplant team of Bangladesh."
+    }
+    </script>
+
+  <style>
+    .loader-animation-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 142px;
+      height: 40px;
+      margin: -20px 0 0 -71px;
+      background: white;
+      filter: contrast(20);
+    }
+
+    .loader-animation-container .dot {
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 12px;
+      left: 5px;
+      filter: blur(4px);
+      background: #000;
+      border-radius: 50%;
+      transform: translateX(0);
+      animation: dot 2.8s infinite;
+    }
+
+    .dots {
+      transform: translateX(0);
+      margin-top: 12px;
+      margin-left: 31px;
+      animation: dots 2.8s infinite;
+    }
+
+    .dots span {
+      display: block;
+      float: left;
+      width: 16px;
+      height: 16px;
+      margin-left: 16px;
+      filter: blur(4px);
+      background: #000;
+      border-radius: 50%;
+    }
+
+    @keyframes dot {
+      50% {
+        transform: translateX(96px);
+      }
+    }
+
+    @keyframes dots {
+      50% {
+        transform: translateX(-31px);
+      }
+    }
+  </style>
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com" media="screen">
+  <link rel="preconnect" href="https://fonts.googleapis.com" media="screen">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+    media="screen">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="screen">
+  <link rel="preconnect" href="https://www.w3schools.com" media="screen">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" media="screen">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" media="screen">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    media="screen">
+
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="mat-typography">
+  <app-root>
+    <div class="loader-animation-container">
+      <span class="dot"></span>
+      <div class="dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </app-root>
+  <!-- Google tag (gtag.js) -->
+  <script src="https://www.googletagmanager.com/gtag/js?id=G-Y5FW41H3P5"></script>
+  <script defer>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y5FW41H3P5');
+  </script>
 </body>
+
 </html>
